--- a/serverless.yml
+++ b/serverless.yml
@@ -1,11 +1,11 @@
-service: min2
+service: ironode
 frameworkVersion: '3'
 
 provider:
   name: aws
   runtime: nodejs12.x
   stage: dev
-  region: ap-northeast-1
+  region: ap-northeast-2
 functions:
   hello:
     handler: handler.hello
